--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">WeSport</string>
     <string name="title_activity_maps">Map</string>
     <string name="google_maps_key">AIzaSyBVNTU4-pamgBohtCxqAhjZc-kG7ZGHcWU</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="send_button_label">Send</string>
 </resources>
