--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="send_button_label">Send</string>
     <string name="action_settings">Settings</string>
     <string name="next">Next</string>
+    <string name="savedgames_string">My Saved Games</string>
     <string name="empty_string">No Saved Games</string>
+    <string name="description_refresh">Refresh data</string>
+    205
 </resources>
