--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,19 +98,8 @@
     <string name="game_pro">Pro</string>
     <!-- Text hint for Autocomplete textview -->
 
+    <string name="empty_game_list">No Game Information Available</string>
 
     <string name="search_hint">Search places to play</string>
-    <string name="place_details">
-    <![CDATA[
-        <b>%1$s</b>
-        <br/>
-        <i>Place Id: %2$s</i>
-        <br/>
-        Address: %3$s
-        <br/>
-        Phone: %4$s
-        <br/>
-        Website: %5$s
-    ]]>
-    </string>
+
 </resources>
