--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,34 @@
 <resources>
     <string name="app_name">WeSport</string>
+    <string name="app_intro">Introduction</string>
+
     <string name="title_activity_maps">Map</string>
     <string name="google_maps_key">AIzaSyBVNTU4-pamgBohtCxqAhjZc-kG7ZGHcWU</string>
     <string name="sign_out">Sign Out</string>
     <string name="send_button_label">Send</string>
     <string name="action_settings">Settings</string>
     <string name="next">Next</string>
-    <string name="savedgames_string">My Saved Games</string>
-    <string name="empty_string">No Saved Games</string>
-    <string name="description_refresh">Refresh data</string>
-    <string name="permision_available_location">Location Permission has been granted. Preview can now be opened.</string>
-    <string name="permissions_not_granted">Permissions were not granted.</string>
 
+    <!-- Intro slides headings-->
+
+    <string name="first_screen">Welcome to WeSport</string>
+    <string name="second_screen">Select existing places or search places by address</string>
+    <string name="third_screen">Store Game information</string>
+    <string name="fourth_screen">Game details and information</string>
+    <string name="fifth_screen">Chat room</string>
+
+    <!-- Intro slides descriptions-->
+    <string name="scr1_desc">WeSport allows people to connect with each other to play games and stay active</string>
+    <string name="scr2_desc">Recommends play places around user\'s location</string>
+    <string name="scr3_desc">Add game details for every games and access the same from widget</string>
+    <string name="scr4_desc">View all game information and access chat room</string>
+    <string name="scr5_desc">Help coordinate and communicate with each other</string>
+
+    <!-- Locations permissions strings-->
+
+    <string name="permision_available_location">Location permission granted.</string>
+    <string name="permissions_not_granted">Permissions were not granted.</string>
+    <string name="close_app">Location permissions required to run app. App will now close</string>
 
     <!-- Label for Google API Web-services-->
     <string name="place_api_key">AIzaSyCgAtXv1F6IYFp-b64WjX7acDMKCeW5_3g</string>
@@ -122,6 +139,6 @@
     <string name="empty_game_list">No Game Information Available</string>
 
     <string name="search_hint">Search places to play</string>
-    <string name="close_app">Location permissions required to run app. App will now close</string>
+
 
 </resources>
