--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,16 @@
     <string name="title_activity_maps">Map</string>
     <string name="sign_out">Sign Out</string>
     <string name="send_button_label">Send</string>
+
+    <!-- GridView selection items-->
+
+    <string name="chosen_game">Chosen game:  </string>
+    <string name="loc_changed">Location changed</string>
+
+
+    <!-- Menu items-->
     <string name="action_settings">Settings</string>
-    <string name="next">Next</string>
+    <string name="next_menu">Next</string>
 
     <!-- Intro slides headings-->
 
@@ -36,14 +44,14 @@
     <!-- Games array-->
 
     <string-array name="games_array">
-        <item>Basketball</item>
-        <item>Cricket</item>
-        <item>Football</item>
-        <item>Tennis</item>
-        <item>Frisbee</item>
-        <item>Pingpong</item>
-        <item>Soccer</item>
-        <item>Volleyball</item>
+        <item> basketball</item>
+        <item> cricket</item>
+        <item> football</item>
+        <item> tennis</item>
+        <item> frisbee</item>
+        <item> pingpong</item>
+        <item> soccer</item>
+        <item> volleyball</item>
     </string-array>
 
 
@@ -138,6 +146,11 @@
     <string name="empty_game_list">No Game Information Available</string>
 
     <string name="search_hint">Search places to play</string>
+
+    <!-- chat activity strings-->
+
+    <string name="signin_string">Signed in! </string>
+    <string name="signin_cancel">Sign in canceled</string>
 
 
 </resources>
