--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,10 +147,14 @@
 
     <string name="search_hint">Search places to play</string>
 
+    <string name="date_compare_string">End time should be after Start Time</string>
+
+
     <!-- chat activity strings-->
 
     <string name="signin_string">Signed in! </string>
     <string name="signin_cancel">Sign in canceled</string>
+    <string name="editor_insert_game_params">Game description and Start date both are required</string>
 
 
 </resources>
