--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,5 +177,6 @@
     <string name="accessibility_photopicker">photo picker image</string>
     <string name="accessibility_chatbox">image for chatroom</string>
     <string name="sensor_param">false</string>
+    <string name="add_desc">click next to create games</string>
 
 </resources>
