write calendar event

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,5 +199,8 @@
     <!-- RegisterActivity-->
     <string name="error_fields_empty">Please make sure you enter display name, email and password!</string>
     <string name="error_incorrect_email_pass">Provide correct email and password with more than 6 characters.</string>
+    <string name="calendar_add_game">Game Added to Calendar</string>
+    <string name="cal_perm_required">Permission</string>
+    <string name="cal_perm_message">Calendar permission is necessary to write Game data!!!</string>
 
 </resources>
